k8s-new-setting/service-a.yaml
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-a # deployment 이름
spec:
  replicas: 2
  selector: # 해당 Deployment 에서 관리하는 Pod label 정의
    matchLabels:
      app.kubernetes.io/name: service-a # service-a 라벨 을 가진 Node 에 배포
      app.kubernetes.io/component: was
  template:
    metadata:
      labels:
        app.kubernetes.io/name: service-a
        app.kubernetes.io/component: was
    spec:
      nodeSelector:
        app.kubernetes.io/name: service-a
        app.kubernetes.io/component: was
      containers:
      - name: service-a
        image: kwakjihoon/service-a:latest
        imagePullPolicy: "Always"
        ports:
        - containerPort: 8080

---
# Service
apiVersion: v1
kind: Service
metadata:
  name: service-a
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: service-a
    app.kubernetes.io/component: was
  ports:
    - protocol: TCP
      port: 8080 # service port
      targetPort: 8080 # container port
