k8s-new-setting/ingress.yaml
# https://kubernetes.io/ko/docs/concepts/services-networking/ingress/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  ingressClassName: nginx
  rules:
    - host: "localhost" # 외부 노출되는 domain
      http:
        paths:
          # Path 기반 라우팅
          - path: /service-a(/|$)(.*)
            # ImplementationSpecific https://docs.nginx.com/nginx-ingress-controller/configuration/ingress-resources/basic-configuration/
            # Prefix
            pathType: ImplementationSpecific
            backend: # Routing to service-a
              service:
                name: service-a
                port:
                  number: 8080 # Servie Port
          - path: /service-b(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: service-b
                port:
                  number: 8080

---
# https://kubernetes.io/docs/tasks/access-application-cluster/ingress-minikube/
# https://kubernetes.github.io/ingress-nginx/user-guide/basic-usage/
